--- a/chat/css/div.css
+++ b/chat/css/div.css
@@ -65,7 +65,7 @@
 .idiv:target .idivc {
   z-index: -520;
   width: 66.6666%;
-  margin-top: auto;
+  margin-top: 30px;
   margin-bottom: auto;
 }
 
