--- a/chat/css/splash.css
+++ b/chat/css/splash.css
@@ -6,6 +6,7 @@
     width: 100%;
     position:fixed;
     overflow:auto;
+    overflow-y: hidden;
     max-height:100%;
     z-index:-887;
     position:fixed;
