--- a/chat/css/var.css
+++ b/chat/css/var.css
@@ -1,6 +1,6 @@
 :root {
   /* Global */
-  --pri-col1: #121525;
+  --pri-col1: #111;
   --pri-col2: #1a1e23;
   --sec-col1: #000000;
   --sec-col2: #00bfff;
@@ -10,25 +10,25 @@
   --accent-temp: #b4b0b0;
   --accent: #ffff80;
   --accent4: #2ECC71;
-  --accent2: #1a1e23;
+  --accent2: #111;
   --accent3: #000000;
   --onion: #59316b;
   --onion-hover: #59316b80;
   --red: #f90921;
   --red-hover: #f9092180;
   --button-text-col: #ddd;
-  --tip: #121525;
+  --tip: #111;
 
   /* Chat Depth Levels */
   --lv3-col: #000000; /* Deepest Level */
-  --lv2-col: #121416; /* Middle Level */
+  --lv2-col: #111; /* Middle Level */
   --lv1-col: var(--accent3); /* Shallowest Level */
 
   /* Login Info */
-  --lg-tx: #121525;
-  --lg-hr: #121525 ;
-  --lg-bg: #005174;
-  --nav-bg: #121525;
+  --lg-tx: #111;
+  --lg-hr: #111 ;
+  --lg-bg: #444;
+  --nav-bg: #111;
   --card-bg: #fefefe;
 
   /* Messages */
